<resources>

    <string name="app_name">Tillage App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tillage_app">TillageApp</string>
    <string name="google_api_key">018o4VfR9saU9YzLLxfrn2AD_eIt85IbHCEcFQQ</string>
    <string name="tillage_type">Tillage</string>
    <string name="tillage_type_Tillage">Tillage</string>
    <string name="tillage_type_Chisel2012">Chisel 2012</string>
    <string name="tillage_menu">Tillage</string>
    <string name="tillage_type_disc2012">Disc 2012</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_help">Help</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_add_field">Add</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_change_to_list">List View</string>
    <string name="menu.layer_rocks_show">Show Rocks</string>
    <string name="menu_layer_hazards">Show Hazards</string>
    <string name="menu_layer_tilerisers">Show Tile Risers</string>
    <string name="menu_change_to_map">Map View</string>
    <string name="menu_layer_rocks_hide">Hide Rocks</string>
    <string name="draw_accept_accept">Accept Annotations</string>
    <string name="draw_accept_reject">Reject Annotations</string>
    <string name="menu_undo_point">Undo Last Point</string>

</resources>