<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_add_field" 
        android:icon="@drawable/ic_content_new_event" 
        android:title="@string/menu_add_field" 
        android:showAsAction="always" 
        android:orderInCategory="2"></item>
    <item android:id="@+id/viewChangeToMap" 
        android:icon="@drawable/ic_location_map" 
        android:showAsAction="always" android:orderInCategory="2" android:title="@string/menu_change_to_map"></item>
	<item android:id="@+id/menu_plan" 
        android:title="@string/menu_plan" 
        android:showAsAction="never" 
        android:orderInCategory="98"></item>
	<item android:id="@+id/menu_help" 
        android:orderInCategory="100" 
        android:title="@string/menu_help" 
        android:showAsAction="never"></item>
</menu>